Alle Pakete: Versetzungsvermerk und Unterschriftenfelder neu programmiert
VERSETZUNG:
- neue INI-Option: VersetzungBeginnASDJahrgang steuert, ab wann es auf dem Zeugnis eine Verstetzung (statt Übergang) gibt.
- Versetzungsvermerk wird in Funktion des Hauptberichts generiert.
UNTERSCHRIFTENFELDER:
- UnterschriftenPersonen wird zu UnterschriftenSLAL. Neue Option V für stellv. Schulleiter, T führt zu Texteingabe (s.u.)
- neue INI-Optionen UnterschriftenKL und UnterschriftenKLText:
Option K: Klassenlehrer
Option T: Texteingabe
Bei T kann man neben dem exakten Text auch ein Lehrerkürzel eingeben. Wenn man eine andere Funktion als Schulleiter bzw. Klassenlehrer haben möchte, kann man die Bezeichnung zusätzlich mit Komma getrennt in Klammern eingeben. Die INI-Option Unterschriften**Text gibt dafür einen Defaultwert an.

--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -27,8 +27,10 @@ ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenPersonen=S
+UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
+UnterschriftenKL=K
+UnterschriftenKLText=Klassenlehrer/in
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -46,8 +48,10 @@ VersetzungBeginnASDJahrgang=06
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
-UnterschriftenPersonen=S
+UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
+UnterschriftenKL=K
+UnterschriftenKLText=Klassenlehrer/in
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -65,8 +69,10 @@ FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
-UnterschriftenPersonen=S
+UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
+UnterschriftenKL=K
+UnterschriftenKLText=Klassenlehrer/in
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -84,8 +90,10 @@ FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
-UnterschriftenPersonen=S
+UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
+UnterschriftenKL=K
+UnterschriftenKLText=Klassenlehrer/in
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -104,20 +112,18 @@ UnicodeInPDFVerwenden=N
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
-; Mögliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; A3ZeugnisSeiten14Ausblenden 
 ; ------------------------------------------
 ; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
 ; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
-; Mögliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; FarbeNotenfeld
 ; --------------
 ; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
-; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
-;
-;
+; mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
 ;
 ; VersetzungBeginnASDJahrgang
 ; -------------------
@@ -127,23 +133,21 @@ UnicodeInPDFVerwenden=N
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 oder 08
-;
-;
+; mögliche Angaben: 06 oder 07 oder 08
 ;
 ; ZeugnisVorname
 ; -------------------
 ; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld "Weitere Vornamen"
 ; das Feld Vorname verwendet.
-; Mögliche Angaben: 
+; mögliche Angaben: 
 ; V=Nur das Feld "Vorname" verwenden 
-; W=Das Feld "Vorname" durch Anh"ngen des Feldes "Weitere Vornamen" ergänzen
+; W=Das Feld "Vorname" durch Anhängen des Feldes "Weitere Vornamen" ergänzen
 ; A=Nur das Feld "Weitere Vornamen" verwenden, es wird damit als "ALLE Vornamen" interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
-; Mögliche Angaben:
+; mögliche Angaben:
 ; Z=Zeugnisdatum des akt. Lernabschnittes
 ; K=Konferenzdatum des akt. Lernabschnittes 
 ; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
@@ -156,102 +160,119 @@ UnicodeInPDFVerwenden=N
 ; ZeugnisDatumAngabe
 ; ------------------
 ; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
-; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
+; mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
 ; ZeugnisInformationenQuelle 
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
-; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
+; mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
 ; 
 ; ZeugnisInformationenWiederanfangAngabe 
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+; mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe1 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe2 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
-;
-; 
-; UnterschriftenPersonen
+; UnterschriftenSLAL
 ; ----------------------
-; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
-; UnterschriftenSLALText einen Wert erhalten.
-; Mögliche Angaben: 
-; S für Schulleitung und Klassenleitung aus Datenbank
-; A	für Abteilungsleitung und Klassenleitung aus Datenbank
-; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
+; legt fest, ob der Schulleiter oder der Abteilungsleiter das Zeugnis unterschreibt. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
+; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenSLALText festgelegt.
+; mögliche Angaben: 
+; S=Schulleitung aus Datenbank
+; V=stellvertretende Schulleitung aus Datenbank
+; A=Abteilungsleitung aus Datenbank
+; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
-; den Wert T haben.
-; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
+; mögliche Angaben:
+; 
+; - Lehrerkürzel; falls andere Funktion als "Schulleiter" gewünscht, 
+;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
+; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
+;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+;
+; UnterschriftenKL
+; ----------------------
+; legt fest, welcher Name unter dem Unterschriftenfeld der Klassenleitung steht. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
+; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenKLText festgelegt.
+; mögliche Angaben: 
+; K=Klassenleitung aus Datenbank
+; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
+;
+; UnterschriftenKLText
+; ----------------------
+; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Klassenleitung voreingestellt ist.
+; mögliche Angaben:
+; 
+; - Lehrerkürzel; falls andere Funktion als "Klassenlehrer" gewünscht, 
+;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
+; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
+;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Klassenlehrer
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
-; werden sollen. Wenn hier die Option N gew"hlt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
-; Mögliche Angaben: J=Ja und N=Nein
+; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitAmtsbezeichnungen 
 ; ----------------------------------
 ; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamen
 ; -------------------------
 ; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamenNurErster 
 ; ----------------------------------
-; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen ber"cksichtigt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitTitel
 ; ----------------------
 ; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitStvKlassenlehrer
 ; ---------------------------------
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
-;
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; SchulabschlussQuelle
 ; ------------------
 ; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
-; Mögliche Angaben:
+; mögliche Angaben:
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
-;
-;
 ;
 ; SchriftenInPDFEinbetten
 ; -----------------------
 ; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
 ; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; Mögliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnicodeInPDFVerwenden
 ; ---------------------
 ; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
 ; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; Mögliche Angaben: J=Ja und N=Nein
-;
+; mögliche Angaben: J=Ja und N=Nein
 ;
