Anpassungen bei allen Schulformen
- PDF Einstellungen korrigiert
- neue Option in der INI für Unterschriftenfelder
- Informatik 5/6 an neue Vorgaben angepasst
- neue Abschlussbezeichnungen ab August 2022

--- a/RS/Zeugniseinstellungen.ini
+++ b/RS/Zeugniseinstellungen.ini
@@ -37,8 +37,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 VersetzungBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 20: Realschule: Überweisungszeugnis
 [Anlage20]
@@ -57,8 +55,6 @@ UnterschriftenMitVornamen=N
 UnterschriftenMitVornamenNurErster=N
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 21: Realschule: Abgangszeugnis A4 und A3
 [Anlage21]
@@ -78,8 +74,6 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 22, 23 und 24: Realschule: Abschlusszeugnisse für HA09, HA10 und FOR einschließlich FOR mit Berechtigung zum Besuch der gym. Oberstufe
 [Anlage22u23u24]
@@ -100,8 +94,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -194,6 +186,7 @@ UnicodeInPDFVerwenden=N
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenSLALText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
@@ -212,6 +205,7 @@ UnicodeInPDFVerwenden=N
 ; mögliche Angaben: 
 ; K=Klassenleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenKLText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenKLText
 ; ----------------------
@@ -263,15 +257,4 @@ UnicodeInPDFVerwenden=N
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
-; SchriftenInPDFEinbetten
-; -----------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
-; UnicodeInPDFVerwenden
-; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
+
