--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -26,8 +26,6 @@ UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
@@ -52,15 +50,13 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
 VersetzungBeginnASDJahrgang=09
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 41: Überweisungszeugnis Gesamtschule
 [Anlage41]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
-ZeugnisDatumQuelle=F  
+ZeugnisDatumQuelle=E  
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
@@ -73,8 +69,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 42: Abgangszeugnis Gesamtschule
 [Anlage42]
@@ -96,8 +90,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 43: Abschlusszeugnis Hauptschulabschluss
 [Anlage43]
@@ -119,8 +111,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 44: Abschlusszeugnis Hauptschulabschluss nach Klasse 10
 [Anlage44]
@@ -142,8 +132,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 45: Abschlusszeugnis Mittlerer Abschluss (3a ohne Q und 3b mit Q)
 [Anlage45]
@@ -165,8 +153,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 
 [Erklaerungen]
@@ -260,6 +246,7 @@ UnicodeInPDFVerwenden=N
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenSLALText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
@@ -278,6 +265,7 @@ UnicodeInPDFVerwenden=N
 ; mögliche Angaben: 
 ; K=Klassenleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenKLText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenKLText
 ; ----------------------
@@ -329,15 +317,4 @@ UnicodeInPDFVerwenden=N
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
-; SchriftenInPDFEinbetten
-; -----------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
-; UnicodeInPDFVerwenden
-; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
+
