--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -37,8 +37,6 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 14: Hauptschule: Überweisungszeugnis
 [Anlage14]
@@ -58,8 +56,6 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 15: Hauptschule: Abgangszeugnis
 [Anlage15]
@@ -80,8 +76,6 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 16, 17 und 18: Hauptschule: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
 [Anlagen16u17u18]
@@ -103,8 +97,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -197,6 +189,7 @@ UnicodeInPDFVerwenden=N
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenSLALText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
@@ -215,6 +208,7 @@ UnicodeInPDFVerwenden=N
 ; mögliche Angaben: 
 ; K=Klassenleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenKLText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenKLText
 ; ----------------------
@@ -266,15 +260,4 @@ UnicodeInPDFVerwenden=N
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
-; SchriftenInPDFEinbetten
-; -----------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
-; UnicodeInPDFVerwenden
-; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
+
