--- a/SK/kooperativ/Zeugniseinstellungen.ini
+++ b/SK/kooperativ/Zeugniseinstellungen.ini
@@ -34,8 +34,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
 VersetzungBeginnASDJahrgang=09
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 
@@ -59,8 +57,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
 VersetzungBeginnASDJahrgang=09
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 
@@ -83,8 +79,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
 
@@ -107,8 +101,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -132,8 +124,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -157,8 +147,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -182,8 +170,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -208,8 +194,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
 VersetzungBeginnASDJahrgang=09
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 
@@ -233,8 +217,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
 VersetzungBeginnASDJahrgang=09
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 
@@ -257,8 +239,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
 
@@ -281,8 +261,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -307,8 +285,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -332,8 +308,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -357,8 +331,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
@@ -454,6 +426,7 @@ ZeugnisVorname=A
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenSLALText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
@@ -472,6 +445,7 @@ ZeugnisVorname=A
 ; mögliche Angaben: 
 ; K=Klassenleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenKLText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenKLText
 ; ----------------------
@@ -523,15 +497,4 @@ ZeugnisVorname=A
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
-; SchriftenInPDFEinbetten
-; -----------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
-; UnicodeInPDFVerwenden
-; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; mögliche Angaben: J=Ja und N=Nein
-;
+
